--- a/Pages/dangky.html
+++ b/Pages/dangky.html
@@ -55,7 +55,7 @@
                             <label for="">Cấp độ thành viên</label>
                         </td>
                         <td>
-                            <input type="radio" name="memberType" id="">Bạc
+                            <input type="radio" name="memberType" id="" checked>Bạc
                             <input type="radio" name="memberType" id="">Vàng
                             <input type="radio" name="memberType" id="">Bạch Kim
                         </td>
