--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- https://ntpb2306569.cloudaccess.host/ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,40 +25,50 @@
     <main>
         <arcticle>
             <img src="/data/images/trangchu/bg-home.jpg" alt="">
-            <h1>Sản Phẩm Mới</h1>
-            <h2>Sữa chua tốt cho sức khỏe</h2>
-            <img src="/data/images/trangchu/yogurt.jpg" alt="yogurt">
-            <p>Sữa chua là một loại thực phẩm  được tạo ra từ quá trình lên men sữa của các vi khuẩn.Hầu hết các loại sữa đều có thể dùng làm sữa chua, tuy nhiên sữa bò là được dùng nhiều hơn hết.Sữa chua hay được gọi là yaourt(là da-ua).Chúng được lên men từ sữa động vật nhờ vi khuẩn lactic, đã được khử chất béo và thanh trùng ở nhiệt độ 80 - 90 độ C.Sữa chua có 2 loại cơ bản là sữa chua có đường và sữa chua không đường.Bên cạnh đó còn có loại sữa chua uống, sữa chua men sống.váng sữa thường được chia làm 3 loại dựa vào hàm lượng chất béo có trong sản phẩm: váng sữa có hàm lượng chất béo cao nhất(35-50% chất béo),váng sữa thông thường(10-30% chất béo),váng sữa nguyên kem(6-15% chất béo).
-                <a href="#">Xem chi tiết</a>
-            </p>
-            <h1>Góc thành viên</h1>
-            <h2>Sữa Chua Làm Nhà</h2>
-            <video src="/data/images/trangchu/yogurt.mp4" muted controls></video>
-            <p>Học làm sữa chua tại gia cùng chuyên gia.Trong thực đơn dinh dưỡng của các bà mẹ cho con trẻ và các thành viên trong gia đình đều không thể thiếu món sữa chua thơm ngon, hấp dẫn và cực kì tốt cho sức khỏe này.Tuy nhiên, đa phần đều chọn mua sữa chua công nghiệp đã được đóng hộp bán sẵn tại các siêu thị và của hàng hơn là sữa chua tự làm tại nhà.Như vậy, liệu sữa chua nhà làm và sữa chua công nghiệp thì loại nào tốt cho sức khỏe của chúng ta hơn? Nếu là một người yêu thích nấu ăn bạn sẽ chọn sữa nhà làm hay mua sữa chua công nghiệp bên ngoài. Sữa chua nhà làm đảm bảo về độ an toàn, chất lượng cũng như giá thành rẻ
-                <a href="#">Xem chi tiết</a>
-            </p>
+            <section>
+                <h1>Sản Phẩm Mới</h1>
+                <h2>Sữa chua tốt cho sức khỏe</h2>
+                <img src="/data/images/trangchu/yogurt.jpg" alt="yogurt">
+                <p>Sữa chua là một loại thực phẩm  được tạo ra từ quá trình lên men sữa của các vi khuẩn.Hầu hết các loại sữa đều có thể dùng làm sữa chua, tuy nhiên sữa bò là được dùng nhiều hơn hết.Sữa chua hay được gọi là yaourt(là da-ua).Chúng được lên men từ sữa động vật nhờ vi khuẩn lactic, đã được khử chất béo và thanh trùng ở nhiệt độ 80 - 90 độ C.Sữa chua có 2 loại cơ bản là sữa chua có đường và sữa chua không đường.Bên cạnh đó còn có loại sữa chua uống, sữa chua men sống.váng sữa thường được chia làm 3 loại dựa vào hàm lượng chất béo có trong sản phẩm: váng sữa có hàm lượng chất béo cao nhất(35-50% chất béo),váng sữa thông thường(10-30% chất béo),váng sữa nguyên kem(6-15% chất béo).
+                    <a href="#">Xem chi tiết</a>
+                </p>
+            </section>
+            <section>
+                <h1>Góc thành viên</h1>
+                <h2>Sữa Chua Làm Nhà</h2>
+                <video src="/data/images/trangchu/yogurt.mp4" muted controls></video>
+                <p>Học làm sữa chua tại gia cùng chuyên gia.Trong thực đơn dinh dưỡng của các bà mẹ cho con trẻ và các thành viên trong gia đình đều không thể thiếu món sữa chua thơm ngon, hấp dẫn và cực kì tốt cho sức khỏe này.Tuy nhiên, đa phần đều chọn mua sữa chua công nghiệp đã được đóng hộp bán sẵn tại các siêu thị và của hàng hơn là sữa chua tự làm tại nhà.Như vậy, liệu sữa chua nhà làm và sữa chua công nghiệp thì loại nào tốt cho sức khỏe của chúng ta hơn? Nếu là một người yêu thích nấu ăn bạn sẽ chọn sữa nhà làm hay mua sữa chua công nghiệp bên ngoài. Sữa chua nhà làm đảm bảo về độ an toàn, chất lượng cũng như giá thành rẻ
+                    <a href="#">Xem chi tiết</a>
+                </p>
+            </section>
             <h1>Hướng Dẫn Làm Sữa Chua Không Đường</h1>
-            <h3>Nguyên liệu làm sữa chua không đường</h3>
-            <ul>
-                <li>1 lít sữa tươi không đường</li>
-                <li>1 hộp sữa chua men cái không đường(bạn có thể mua sữa chua đóng hộp không đường như Vinamilk,TH True Milk,...)</li>
-                <li>Dụng cụ nấu và ủ sữa chua</li>
-            </ul>
-            <h3>Các bước thực hiện</h3>
-            <ol>
-                <li>Cho sữa chua không đường vào nồi, đun nóng lên và khuấy đều, nhẹ tay theo 1 chiều.Tới khi sữa đạt khoảng 40 độ C thì tắt bếp.Bạn có thể dùng tay để kiểm tra, thấy sữa ấm vừa phải là được.</li>
-                <li>Đổ hộp sữa chua làm men cái vào và khuấy đều, múc vào hũ và đem đi ủ 6-8 tiếng.</li>
-                <li>Sau khi ủ xong, bạn có thể dùng 1 hũ sữa chua vừa ủ để ăn thử,nếu thấy đạt vị chua rồi có thể bảo quản trong ngăn mát tủ lạnh và thưởng thức dần nhé</li>
-            </ol>
-            <h2>Đặt Hàng Ngay</h2>
-            <img  src="/data/images/trangchu/order_1.png" alt="" width="40">
-            <p>Gọi điện</p>
-            <img src="/data/images/trangchu/order_2.png" alt="" width="40">
-            <p>Đặt Hàng</p>
-            <img src="/data/images/trangchu/order_3.png" alt="" width="40">
-            <p>Nhận Hàng</p>
-            <img src="/data/images/trangchu/order_4.png" alt="" width="40">
-            <p>Thanh Toán</p>
+            <section>
+                <h3>Nguyên liệu làm sữa chua không đường</h3>
+                <ul>
+                    <li>1 lít sữa tươi không đường</li>
+                    <li>1 hộp sữa chua men cái không đường(bạn có thể mua sữa chua đóng hộp không đường như Vinamilk,TH True Milk,...)</li>
+                    <li>Dụng cụ nấu và ủ sữa chua</li>
+                </ul>
+            </section>
+            <section>
+                <ol>
+                    <li>Cho sữa chua không đường vào nồi, đun nóng lên và khuấy đều, nhẹ tay theo 1 chiều.Tới khi sữa đạt khoảng 40 độ C thì tắt bếp.Bạn có thể dùng tay để kiểm tra, thấy sữa ấm vừa phải là được.</li>
+                    <li>Đổ hộp sữa chua làm men cái vào và khuấy đều, múc vào hũ và đem đi ủ 6-8 tiếng.</li>
+                    <li>Sau khi ủ xong, bạn có thể dùng 1 hũ sữa chua vừa ủ để ăn thử,nếu thấy đạt vị chua rồi có thể bảo quản trong ngăn mát tủ lạnh và thưởng thức dần nhé</li>
+                </ol>
+            </section>
+            <section>
+                <h3>Các bước thực hiện</h3>
+                <h2>Đặt Hàng Ngay</h2>
+                <img  src="/data/images/trangchu/order_1.png" alt="" width="100">
+                <p>Gọi điện</p>
+                <img src="/data/images/trangchu/order_2.png" alt="" width="100">
+                <p>Đặt Hàng</p>
+                <img src="/data/images/trangchu/order_3.png" alt="" width="100">
+                <p>Nhận Hàng</p>
+                <img src="/data/images/trangchu/order_4.png" alt="" width="100">
+                <p>Thanh Toán</p>
+            </section>
         </arcticle>
     </main>
     <footer>
