--- a/Pages/dangky.html
+++ b/Pages/dangky.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <a href="/index.html" id="logo"><img src="/data/images/logo.png" alt=""></a>
+        <a href="trangchu.html" id="logo"><img src="/data/images/logo.png" alt=""></a>
         <!-- <img src="/data/images/logo.png" alt="logofreeeze" onclick="go()"> -->
         </map>
         <nav>
-            <a href="/index.html">Trang Chủ </a>
+            <a href="trangchu.html">Trang Chủ </a>
             <a href="gioithieu.html">Giới Thiệu </a>
             <a href="sanpham.html">Sản Phẩm </a>
             <a href="tintuc.html">Tin Tức</a>
