--- a/Pages/tintuc.html
+++ b/Pages/tintuc.html
@@ -30,7 +30,7 @@
                     <a href="lienhe.html">Liên Hệ</a>
                 </div>
                 <div class="icon">
-                    <input type="text">
+                    <input type="text" placeholder="Nhập nội dung tìm kiếm">
                     <i class="fas fa-search"></i>
                     <i class="fas fa-shopping-cart"></i>
                 </div>
