--- a/Pages/sanpham.html
+++ b/Pages/sanpham.html
@@ -28,15 +28,16 @@
                 <a href="lienhe.html">Liên Hệ</a>
             </div>
             <div class="icon">
-                <input type="text">
+                <input type="text" placeholder="Nhập nội dung tìm kiếm">
                 <i class="fas fa-search"></i>
                 <i class="fas fa-shopping-cart"></i>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="block">
         <article>
-            <h1>Sản phẩm truyền thống</h1>
+            <h1 class="theme">Sản phẩm truyền thống</h1>
+            <div class="gradient"></div>
             <div class="col1">
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/kiwi.jpg" alt="">
@@ -77,7 +78,8 @@
             </div>
         </article>
         <article>
-            <h1>Sản phẩm mới</h1>
+            <h1 class="theme">Sản phẩm mới</h1>
+            <div class="gradient"></div>
             <div class="col1">
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/blackberry.jpg" alt="">
@@ -118,12 +120,13 @@
             </div>
         </article>
         <article>
-            <h1>SẢN PHẨM TRÁI CÂY</h1>
+            <h1 class="theme">SẢN PHẨM TRÁI CÂY</h1>
+            <div class="gradient"></div>
             <div class="col1">
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/grapes.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Bưởi</h2>
-                    <p>Bưởi là một loại quả thuộc chi Cam chanh có nguồn gốc từ Đông Nam Á.Bưởi tiếng Anh là Pomelo,tuy nhiên nhiều từ điển ở Việt Nam lại dịch thành grapesfruit
+                    <p >Bưởi là một loại quả thuộc chi Cam chanh có nguồn gốc từ Đông Nam Á.Bưởi tiếng Anh là Pomelo,tuy nhiên nhiều từ điển ở Việt Nam lại dịch thành grapesfruit
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
