--- a/Pages/trangchu.html
+++ b/Pages/trangchu.html
@@ -15,9 +15,9 @@
         <!-- <img src="/data/images/logo.png" alt="logofreeeze" onclick="go()"> -->
             <table class="header_img">
                 <tr>
-                    <td><img src="../data/images/header-img1.png" class="header1" height="85" alt=""></td>
-                    <td><img src="../data/images/header-img2.png" class="header2" height="60" alt=""></td>
-                    <td><img src="../data/images/header-img3.png" class="header3" height="65" alt=""></td>
+                    <td><img src="../data/images/header-img1.png" class="header1" height="85px" alt=""></td>
+                    <td><img src="../data/images/header-img2.png" class="header2" height="60px" alt=""></td>
+                    <td><img src="../data/images/header-img3.png" class="header3" height="70px" alt=""></td>
                 </tr>
             </table>
         <nav>
@@ -31,33 +31,34 @@
                 <a href="lienhe.html">Liên Hệ</a>
             </div>
             <div class="icon">
-                <input type="text">
+                <input type="text" placeholder="Nhập nội dung tìm kiếm">
                 <i class="fas fa-search"></i>
                 <i class="fas fa-shopping-cart"></i>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="block">
         <arcticle>
             <img src="/data/images/trangchu/bg-home.jpg" alt="" width="100%">
             <section>
-                <h1 >Sản Phẩm Mới</h1>
+                <h1 class="theme">Sản Phẩm Mới</h1>
                 <div class="gradient"></div>
                 <h2 >Sữa chua tốt cho sức khỏe</h2>
                 <div class="col2">
-                    <div class="col2_aside_left"><img width="250px"  src="/data/images/trangchu/yogurt.jpg" alt="yogurt"></div>
-                    <div><p>Sữa chua là một loại thực phẩm  được tạo ra từ quá trình lên men sữa của các vi khuẩn.Hầu hết các loại sữa đều có thể dùng làm sữa chua, tuy nhiên sữa bò là được dùng nhiều hơn hết.Sữa chua hay được gọi là yaourt(là da-ua).Chúng được lên men từ sữa động vật nhờ vi khuẩn lactic, đã được khử chất béo và thanh trùng ở nhiệt độ 80 - 90 độ C.Sữa chua có 2 loại cơ bản là sữa chua có đường và sữa chua không đường.Bên cạnh đó còn có loại sữa chua uống, sữa chua men sống.váng sữa thường được chia làm 3 loại dựa vào hàm lượng chất béo có trong sản phẩm: váng sữa có hàm lượng chất béo cao nhất(35-50% chất béo),váng sữa thông thường(10-30% chất béo),váng sữa nguyên kem(6-15% chất béo).
+                    <div class="col2_aside_left"><img width="350px"  src="/data/images/trangchu/yogurt.jpg" alt="yogurt"></div>
+                    <div><p class="title">Sữa chua là một loại thực phẩm  được tạo ra từ quá trình lên men sữa của các vi khuẩn.Hầu hết các loại sữa đều có thể dùng làm sữa chua, tuy nhiên sữa bò là được dùng nhiều hơn hết.Sữa chua hay được gọi là yaourt(là da-ua).Chúng được lên men từ sữa động vật nhờ vi khuẩn lactic, đã được khử chất béo và thanh trùng ở nhiệt độ 80 - 90 độ C.Sữa chua có 2 loại cơ bản là sữa chua có đường và sữa chua không đường.Bên cạnh đó còn có loại sữa chua uống, sữa chua men sống.váng sữa thường được chia làm 3 loại dựa vào hàm lượng chất béo có trong sản phẩm: váng sữa có hàm lượng chất béo cao nhất(35-50% chất béo),váng sữa thông thường(10-30% chất béo),váng sữa nguyên kem(6-15% chất béo).
                         <a href="#">Xem chi tiết</a></p></div>
                 </div>
             </section>
             <section>
-                <h1 >Góc thành viên</h1>
+                <h1 class="theme">Góc thành viên</h1>
                 <div class="gradient"></div>
                 <h2 >Sữa Chua Làm Nhà</h2>
                 <div class="col2">
-                    <div class="col2_article_left"><p>Học làm sữa chua tại gia cùng chuyên gia.Trong thực đơn dinh dưỡng của các bà mẹ cho con trẻ và các thành viên trong gia đình đều không thể thiếu món sữa chua thơm ngon, hấp dẫn và cực kì tốt cho sức khỏe này.Tuy nhiên, đa phần đều chọn mua sữa chua công nghiệp đã được đóng hộp bán sẵn tại các siêu thị và của hàng hơn là sữa chua tự làm tại nhà.Như vậy, liệu sữa chua nhà làm và sữa chua công nghiệp thì loại nào tốt cho sức khỏe của chúng ta hơn? Nếu là một người yêu thích nấu ăn bạn sẽ chọn sữa nhà làm hay mua sữa chua công nghiệp bên ngoài. Sữa chua nhà làm đảm bảo về độ an toàn, chất lượng cũng như giá thành rẻ
+                    <div class="col2_article_left">
+                        <p class="title">Học làm sữa chua tại gia cùng chuyên gia.Trong thực đơn dinh dưỡng của các bà mẹ cho con trẻ và các thành viên trong gia đình đều không thể thiếu món sữa chua thơm ngon, hấp dẫn và cực kì tốt cho sức khỏe này.Tuy nhiên, đa phần đều chọn mua sữa chua công nghiệp đã được đóng hộp bán sẵn tại các siêu thị và của hàng hơn là sữa chua tự làm tại nhà.Như vậy, liệu sữa chua nhà làm và sữa chua công nghiệp thì loại nào tốt cho sức khỏe của chúng ta hơn? Nếu là một người yêu thích nấu ăn bạn sẽ chọn sữa nhà làm hay mua sữa chua công nghiệp bên ngoài. Sữa chua nhà làm đảm bảo về độ an toàn, chất lượng cũng như giá thành rẻ
                         <a href="#">Xem chi tiết</a></p></div>
-                    <div ><video src="/data/images/trangchu/yogurt.mp4" muted controls width="250px"></video></div>
+                    <div ><video src="/data/images/trangchu/yogurt.mp4" muted controls width="300px"></video></div>
                 </div>
                 
             </section>
@@ -67,9 +68,9 @@
                     <section>
                         <h3>Nguyên liệu làm sữa chua không đường</h3>
                         <ul>
-                            <li>1 lít sữa tươi không đường</li>
-                            <li>1 hộp sữa chua men cái không đường(bạn có thể mua sữa chua đóng hộp không đường như Vinamilk,TH True Milk,...)</li>
-                            <li>Dụng cụ nấu và ủ sữa chua</li>
+                            <li class="title">1 lít sữa tươi không đường</li>
+                            <li class="title">1 hộp sữa chua men cái không đường(bạn có thể mua sữa chua đóng hộp không đường như Vinamilk,TH True Milk,...)</li>
+                            <li class="title">Dụng cụ nấu và ủ sữa chua</li>
                         </ul>
                     </section>
                 </div>
@@ -77,9 +78,9 @@
                     <section>
                         <h3>Các bước thực hiện</h3>
                         <ol>
-                            <li>Cho sữa chua không đường vào nồi, đun nóng lên và khuấy đều, nhẹ tay theo 1 chiều.Tới khi sữa đạt khoảng 40 độ C thì tắt bếp.Bạn có thể dùng tay để kiểm tra, thấy sữa ấm vừa phải là được.</li>
-                            <li>Đổ hộp sữa chua làm men cái vào và khuấy đều, múc vào hũ và đem đi ủ 6-8 tiếng.</li>
-                            <li>Sau khi ủ xong, bạn có thể dùng 1 hũ sữa chua vừa ủ để ăn thử,nếu thấy đạt vị chua rồi có thể bảo quản trong ngăn mát tủ lạnh và thưởng thức dần nhé</li>
+                            <li class="title">Cho sữa chua không đường vào nồi, đun nóng lên và khuấy đều, nhẹ tay theo 1 chiều.Tới khi sữa đạt khoảng 40 độ C thì tắt bếp.Bạn có thể dùng tay để kiểm tra, thấy sữa ấm vừa phải là được.</li>
+                            <li class="title">Đổ hộp sữa chua làm men cái vào và khuấy đều, múc vào hũ và đem đi ủ 6-8 tiếng.</li>
+                            <li class="title">Sau khi ủ xong, bạn có thể dùng 1 hũ sữa chua vừa ủ để ăn thử,nếu thấy đạt vị chua rồi có thể bảo quản trong ngăn mát tủ lạnh và thưởng thức dần nhé</li>
                         </ol>
                     </section>
                 </div>
