--- a/Pages/tintuc.html
+++ b/Pages/tintuc.html
@@ -36,60 +36,65 @@
                 </div>
             </nav>
         </header>
-    <main>
-        <h1>TIN TỨC</h1>
-        <article>
-            <section>
+    <main class="box">
+        <div class="col2">
+            <aside class="col2_article_right left_aside">
+                <h1 class="theme">Được Quan</h1>
+                <h1 class="theme">Tâm</h1>
+                <div class="gradient" style="left: 21%;"></div>
+                <img src="/data/images/tintuc/hotnews.jpg" alt="" width="300">
+                <h2>KHAI TRƯƠNG HÂN HOAN-ƯU ĐÃI NGẬP TRÀN</h2>
+                <p class="title p_fix">Khai trương hân hoan-ưu đãi ngập tràn 🌈🥰 Thêm 1 ngôi nhà mới của Sữa chua Freeeze được khai trương.
+                    <a href="#">Xem chi tiết.</a>
+                </p>
+            </aside>
+            <article>
+                <h1 class="theme">TIN TỨC</h1>
+                <div class="gradient" style="left: 40%;"></div>
                 <h2>LỘ DIỆN SIÊU NĂNG LỰC TỪ TRÁI XOÀI!</h2>
-                <img src="/data/images/tintuc/news1.jpg" alt="" width="400">
-                <p>Xoài là một trong những cây ăn trái chủ lực của đồng bằng sông Cửu Long(ĐBSCL),chiếm khoảng 48% tổng diện tích xoài cả nước. Trong đó, tỉnh Đồng Tháp hiện có diện tích trồng xoài khoảng 12.171ha-lớn nhất vùng ĐBSCL với sản lượng hàng năm gần 124 ngàn tấn
-                    <a href="#">Xem chi tiết.</a>
-                </p>
-            </section>
-            <section>
-                <h2>SỮA CÁC LOẠI HẠT-MÓN NGON CHO HỆ MIỄN DỊCH KHỎE</h2>
-                <img src="/data/images/tintuc/news2.jpg" alt="" width="400">
-                <p>Các loại sữa hạt càng ngày càng trở nên quen thuộc với mọi người, bởi hàm lượng dinh dưỡng cao và lành tính.Với thị trường sữa hạt đa dạng phong phú,hôm nay chúng ta cùng điểm qua xem có các loại sữa hạt nào, và loại nào là bổ dưỡng nhất cho sức khỏe?
-                    <a href="#">Xem chi tiết.</a>
-                </p>
-            </section>
-            <section>
+                <section class="block_ads">
+                    <p class="title">Xoài là một trong những cây ăn trái chủ lực của đồng bằng sông Cửu Long(ĐBSCL),chiếm khoảng 48% tổng diện tích xoài cả nước. Trong đó, tỉnh Đồng Tháp hiện có diện tích trồng xoài khoảng 12.171ha-lớn nhất vùng ĐBSCL với sản lượng hàng năm gần 124 ngàn tấn
+                        <a href="#">Xem chi tiết.</a>
+                    </p>
+                    <img class="ads_img" src="/data/images/tintuc/news1.jpg" alt="" width="300px">
+                </section>
+                <h2 style="padding-bottom: 12px;">SỮA CÁC LOẠI HẠT-MÓN NGON CHO HỆ MIỄN DỊCH KHỎE</h2>
+                <section class="block_ads">
+                    <p class="title">Các loại sữa hạt càng ngày càng trở nên quen thuộc với mọi người, bởi hàm lượng dinh dưỡng cao và lành tính.Với thị trường sữa hạt đa dạng phong phú,hôm nay chúng ta cùng điểm qua xem có các loại sữa hạt nào, và loại nào là bổ dưỡng nhất cho sức khỏe?
+                        <a href="#">Xem chi tiết.</a>
+                    </p>
+                    <img  src="/data/images/tintuc/news2.jpg" alt="" width="300px">
+                </section>
                 <h2>SỮA CHUA KIWI-MÓN QUÀ CHO SỨC KHỎE</h2>
-                <img src="/data/images/tintuc/news3.jpg" alt="" width="400">
-                <p>Kiwi thành phần dinh dưỡng rất cao so với các loại hoa quả khác.Hàm lượng vitamin C cao co hệ miễn dịch khỏe mạnh cùng nguồn chất sơ hỗ trợ hệ tiêu hóa.Siêu quá Kiwi cho cả nhà siêu khỏe, 100% Vitamin C cần thiết mỗi ngày.
-                    <a href="#">Xem chi tiết.</a>
-                </p>
-            </section>
-            <section>
-                <h2>RA MẮ APP SỮA CHUA Freeeze TRÊN NỀN TẢNG IOS</h2>
-                <img src="/data/images/tintuc/news4.jpg" alt="" width="400">
-                <p>Nhằm mang đến cho tất cả khách hàng những trải nghiệm thú vị nhất Công ty Sữa Chua Freeeze giới thiệu app đặt hàng độc đáo,giúp khách hàng mua sắm được mọi lúc mọi nơi với nhiều tiện ích
-                    <a href="#">Xem chi tiết.</a>
-                </p>
-            </section>
-            <section>
+                <section class="block_ads">
+                    <p class="title">Kiwi thành phần dinh dưỡng rất cao so với các loại hoa quả khác.Hàm lượng vitamin C cao co hệ miễn dịch khỏe mạnh cùng nguồn chất sơ hỗ trợ hệ tiêu hóa.Siêu quá Kiwi cho cả nhà siêu khỏe, 100% Vitamin C cần thiết mỗi ngày.
+                        <a href="#">Xem chi tiết.</a>
+                    </p>
+                    <img src="/data/images/tintuc/news3.jpg" alt="" width="300px">
+                </section>
+                <h2 style="padding-bottom: 12px;">RA MẮ APP SỮA CHUA Freeeze TRÊN NỀN TẢNG IOS</h2>
+                <section class="block_ads">
+                    <p class="title">Nhằm mang đến cho tất cả khách hàng những trải nghiệm thú vị nhất Công ty Sữa Chua Freeeze giới thiệu app đặt hàng độc đáo,giúp khách hàng mua sắm được mọi lúc mọi nơi với nhiều tiện ích
+                        <a href="#">Xem chi tiết.</a>
+                    </p>
+                    <img src="/data/images/tintuc/news4.jpg" alt="" width="300px">
+                </section>
                 <h2>ĐĂNG KÝ THÀNH VIÊN-NHẬN NGAY ƯU ĐÃI</h2>
-                <img src="/data/images/tintuc/news5.jpg" alt="" width="400">
-                <p>Công ty sữa chua hân hạnh mang đến chương trình "Đăng Ký Thành Viên" với nhiều ưu đãi độc đáo.Member Card-thẻ thành viên nhà Sữa Chua Freeeze dành cho tất cả khách hàng đăng kí tài khoản và phát sinh đơn hàng
-                    <a href="#">Xem chi tiết.</a>
-                </p>
-            </section>
-            <section>
+                <section class="block_ads">
+                    <p class="title">Công ty sữa chua hân hạnh mang đến chương trình "Đăng Ký Thành Viên" với nhiều ưu đãi độc đáo.Member Card-thẻ thành viên nhà Sữa Chua Freeeze dành cho tất cả khách hàng đăng kí tài khoản và phát sinh đơn hàng
+                        <a href="#">Xem chi tiết.</a>
+                    </p>
+                    <img src="/data/images/tintuc/news5.jpg" alt="" width="300px">
+                </section>
                 <h2>TUYỂN GIÁM SÁT CHUỖI CỬA HÀNG</h2>
-                <img src="/data/images/tintuc/news6.jpg" alt="" width="400">
-                <p>Tuyển Giám Sát chuỗi cửa hàng:-tại khu vực TP Hải Phòng & các tỉnh lân cận-Số lượng: 01 MÔ TẢ:Giám sát hoạt động kinh doanh các cửa hàng:Kiểm tra lịch làm việc của các cửa hàng
-                    <a href="#">Xem chi tiết.</a>
-                </p>
-            </section>
-        </article>
-        <aside>
-            <h1>Được Quan Tâm</h1>
-            <img src="/data/images/tintuc/hotnews.jpg" alt="" width="400">
-            <h2>KHAI TRƯƠNG HÂN HOAN-ƯU ĐÃI NGẬP TRÀN</h2>
-            <p>Khai trương hân hoan-ưu đãi ngập tràn 🌈🥰 Thêm 1 ngôi nhà mới của Sữa chua Freeeze được khai trương.
-                <a href="#">Xem chi tiết.</a>
-            </p>
-        </aside>
+                <section class="block_ads">
+                    <p class="title">Tuyển Giám Sát chuỗi cửa hàng:-tại khu vực TP Hải Phòng & các tỉnh lân cận-Số lượng: 01 MÔ TẢ:Giám sát hoạt động kinh doanh các cửa hàng:Kiểm tra lịch làm việc của các cửa hàng
+                        <a href="#">Xem chi tiết.</a>
+                    </p>
+                    <img src="/data/images/tintuc/news6.jpg" alt="" width="300px">
+                </section>
+            </article>
+        </div>
     </main>
     <footer>
         <p>©2021 Bản quyền thuộc về FreeezeVN.
