--- a/Pages/gioithieu.html
+++ b/Pages/gioithieu.html
@@ -50,7 +50,7 @@
                 <div class="gradient"></div>
                 <p class="title">Khác với nhiều thương hiệu F&B có khởi đầu không mấy dễ dàng. Sữa chua trân châu lại được khách hàng đón nhận và ủng hộ ngay từ khi ra mắt cửa hàng đầu tiên. Chỉ sau hơn 3 tháng phát triển, thương hiệu Sữa chua trân châu đã có trên 30 cửa hàng trên khắp thủ đô và cho đến nay là 250 cửa hàng trên khắp cả nước. Điều gì đã làm nên sự thành công của thương hiệu? Không phải may mắn. Mọi mô hình phát triển bền vững đều xuất phát từ sản phẩm. Chúng tôi chọn sữa chua trân châu, không đơn thuần vì đây là một món ăn truyền thống của gia đình, mà còn bởi sức tiềm năng của sản phẩm đã được người dân đón nhận qua hàng chục năm. Bên cạnh đó, để chuẩn hóa và nhân bản một sản phẩm mắt rất nhiều thời gian, nguồn lực và chi phí. Một sai sót nhỏ trong công thức món ăn hay quy trình sản xuất cũng có thể phải "đập đi xây lại" từ đầu. Chỉ khi giữ được nguyên bản hương vị, đồng thời, làm giàu hàm lượng dinh dưỡng trong từng sản phẩm, chúng tôi mới đủ tự tin để giới thiệu đến khách khách hàng. Có lẽ vì thế, thương hiệu Sữa chua trân châu đã chinh phục được tất cả các khách hàng, từ em bé đến phụ huynh, từ các bạn trẻ đến cả những người lớn tuổi.</p>
                 </div>
-            <div>
+            <div width="283px">
                 <div class="para">
                     <h1 class="theme">Hãy đăng ký thành viên ngay hôm nay</h1>
                     <div class="gradient gra_fix"></div>
