--- a/Pages/sanpham.html
+++ b/Pages/sanpham.html
@@ -42,7 +42,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/kiwi.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Kiwi</h2>
-                    <p class="title">Hương vị thơm ngon của trái Kiwi xanh, nổi tiếng của đất nước New Zealand có trong Sữa chua vị Kiwi xanh đem đến một món ăn nhẹ. Siêu ngon và tốt cho hệ tiêu hóa
+                    <p class="title" style="height: 90px;">Hương vị thơm ngon của trái Kiwi xanh, nổi tiếng của đất nước New Zealand có trong Sữa chua vị Kiwi xanh đem đến một món ăn nhẹ. Siêu ngon và tốt cho hệ tiêu hóa
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -54,7 +54,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/mango.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Xoài</h2>
-                    <p class="title">Sữa chua xoài thích hợp cho mọi lứa tuổi,ví vậy hãy để cả gia đình quây quần bên nhau cùng thưởng thức món ăn thơm ngon, bổ dưỡng này
+                    <p class="title" style="height: 90px;">Sữa chua xoài thích hợp cho mọi lứa tuổi,ví vậy hãy để cả gia đình quây quần bên nhau cùng thưởng thức món ăn thơm ngon, bổ dưỡng này
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -66,7 +66,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/cantaloupe.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Dưa Lưới</h2>
-                    <p class="title">Trong dưa lưới chứa rất nhiều vitamin C có tác dụng làm đẹp da hiệu quả.Phụ nữ ăn sinh tố dưa lưới thường xuyên sẽ có làn da mịn màng
+                    <p class="title" style="height: 90px;">Trong dưa lưới chứa rất nhiều vitamin C có tác dụng làm đẹp da hiệu quả.Phụ nữ ăn sinh tố dưa lưới thường xuyên sẽ có làn da mịn màng
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -84,7 +84,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/blackberry.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Mâm Xôi</h2>
-                    <p class="title">Quả môm xôi là loại quả ăn họ hoa hồng,có nguồn gốc từ châu Âu,Bắc Á và được trồng ở các vùng ôn đới trên toàn thế giới.Có nhiều loại, bao gồm đen,tím và vàng
+                    <p class="title" style="height: 90px;">Quả môm xôi là loại quả ăn họ hoa hồng,có nguồn gốc từ châu Âu,Bắc Á và được trồng ở các vùng ôn đới trên toàn thế giới.Có nhiều loại, bao gồm đen,tím và vàng
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -96,7 +96,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/strawberry.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Dâu Tây</h2>
-                    <p class="title">Dâu tây là một loại cây thân thảo có thân ngắn và các chiếc là mọc gần với nhau.Lá có nhiều gai, bề mặt lá có nhiều lông tơ và kích thước lá có thể khác nhau ở từng giống
+                    <p class="title" style="height: 90px;">Dâu tây là một loại cây thân thảo có thân ngắn và các chiếc là mọc gần với nhau.Lá có nhiều gai, bề mặt lá có nhiều lông tơ và kích thước lá có thể khác nhau ở từng giống
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -108,7 +108,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/blueberry.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Việt Quất</h2>
-                    <p class="title">Quả việt quất chứa các dưỡng chất tốt cho sức khỏe như chất xơ,kali,folate,vitamin C và vitamin B6(những chất hỗ trợ rất tốt cho sức khỏe của tim).
+                    <p class="title" style="height: 90px;">Quả việt quất chứa các dưỡng chất tốt cho sức khỏe như chất xơ,kali,folate,vitamin C và vitamin B6(những chất hỗ trợ rất tốt cho sức khỏe của tim).
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -126,7 +126,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/grapes.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Bưởi</h2>
-                    <p class="title">Bưởi là một loại quả thuộc chi Cam chanh có nguồn gốc từ Đông Nam Á.Bưởi tiếng Anh là Pomelo,tuy nhiên nhiều từ điển ở Việt Nam lại dịch thành grapesfruit
+                    <p class="title" style="height: 90px;">Bưởi là một loại quả thuộc chi Cam chanh có nguồn gốc từ Đông Nam Á.Bưởi tiếng Anh là Pomelo,tuy nhiên nhiều từ điển ở Việt Nam lại dịch thành grapesfruit
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -138,7 +138,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/green-apple.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Táo Xanh</h2>
-                    <p class="title">Táo xanh có hàm lượng chất xơ cao giúp tăng cường quá trình trao đổi chất của cơ thể. Bên cạnh đó, chất xơ còn giúp quá trình giải độc gan và hệ tiêu hóa.
+                    <p class="title" style="height: 90px;">Táo xanh có hàm lượng chất xơ cao giúp tăng cường quá trình trao đổi chất của cơ thể. Bên cạnh đó, chất xơ còn giúp quá trình giải độc gan và hệ tiêu hóa.
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
@@ -150,7 +150,7 @@
                 <section class="box">
                     <img class="img_center" src="/data/images/sanpham/pineapple.jpg" alt="">
                     <h2 class="text_center">Sữa Chua Vị Dứa</h2>
-                    <p class="title">Dứa có các tên gọi khác như là khóm,thơm,khớm,gai hoặc huyền nương.Đây là một loại quả nhiệt đới.Dứa là cây bản địa của các nước Nam Mỹ
+                    <p class="title" style="height: 90px;">Dứa có các tên gọi khác như là khóm,thơm,khớm,gai hoặc huyền nương.Đây là một loại quả nhiệt đới.Dứa là cây bản địa của các nước Nam Mỹ
                         <a href="#">Xem chi tiết</a>
                     </p>
                     <span class="gradie">
