--- a/Pages/tintuc.html
+++ b/Pages/tintuc.html
@@ -39,10 +39,8 @@
     <main class="box">
         <div class="col2">
             <aside class="col2_article_right left_aside">
-                <h1 class="theme">Được Quan</h1>
-                <h1 class="theme">Tâm</h1>
-                <div class="gradient" style="left: 21%;"></div>
-                <img src="/data/images/tintuc/hotnews.jpg" alt="" width="300">
+                <h1 class="theme theme_fix_tintuc" style="max-width: 175px;margin-left: 40px;">Được Quan Tâm</h1>
+                <img style="margin-top: 35px;" src="/data/images/tintuc/hotnews.jpg" alt="" width="300">
                 <h2>KHAI TRƯƠNG HÂN HOAN-ƯU ĐÃI NGẬP TRÀN</h2>
                 <p class="title p_fix">Khai trương hân hoan-ưu đãi ngập tràn 🌈🥰 Thêm 1 ngôi nhà mới của Sữa chua Freeeze được khai trương.
                     <a href="#">Xem chi tiết.</a>
@@ -50,7 +48,6 @@
             </aside>
             <article>
                 <h1 class="theme">TIN TỨC</h1>
-                <div class="gradient" style="left: 40%;"></div>
                 <h2>LỘ DIỆN SIÊU NĂNG LỰC TỪ TRÁI XOÀI!</h2>
                 <section class="block_ads">
                     <p class="title">Xoài là một trong những cây ăn trái chủ lực của đồng bằng sông Cửu Long(ĐBSCL),chiếm khoảng 48% tổng diện tích xoài cả nước. Trong đó, tỉnh Đồng Tháp hiện có diện tích trồng xoài khoảng 12.171ha-lớn nhất vùng ĐBSCL với sản lượng hàng năm gần 124 ngàn tấn
